--- a/DSA/DSA.cbp
+++ b/DSA/DSA.cbp
@@ -31,7 +31,25 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
+		<Unit filename="C_program/ArithmaticOperator.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="C_program/Armstrong.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="C_program/InputAndOutput.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="C_program/fibonacci.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="C_program/simpleInterest.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Unit filename="DeleteAtNthPosition.cpp" />
+		<Unit filename="Helloworld.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Unit filename="InsertAtNthNode.cpp" />
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
